# HateSpeachRecognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
solution1/src/: Model.py  embeddings.py  graphics.py  main.py  text_processing.py
