[tool.poetry]
name = "hatespeachrecognition"
version = "0.1.0"
description = ""
authors = ["Andrii Sonsiadlo <andrii.sonsiadlo@gmail.com>, Krzysztof Ragan, Stanislav Kolakovski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
